// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DisambiguatedProfileView > renders the default state 1`] = `
<div>
  <button
    class="DisambiguatedProfile-module_disambiguatedProfile"
    type="button"
  >
    <span
      class="DisambiguatedProfile-module_disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Alice
    </span>
  </button>
</div>
`;

exports[`DisambiguatedProfileView > renders the full example 1`] = `
<div>
  <button
    class="DisambiguatedProfile-module_disambiguatedProfile"
    title="Eve (@eve:matrix.org)"
    type="button"
  >
    <span
      class="mx_Username_color5 DisambiguatedProfile-module_disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Eve
    </span>
    <span
      class="mx_DisambiguatedProfile_mxid DisambiguatedProfile-module_disambiguatedProfile_mxid"
    >
      @eve:matrix.org
    </span>
    <span
      class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 DisambiguatedProfile-module_userStatus"
    >
      🏝️
    </span>
  </button>
</div>
`;

exports[`DisambiguatedProfileView > renders with MXID for disambiguation 1`] = `
<div>
  <button
    class="DisambiguatedProfile-module_disambiguatedProfile"
    type="button"
  >
    <span
      class="mx_Username_color1 DisambiguatedProfile-module_disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Alice
    </span>
    <span
      class="mx_DisambiguatedProfile_mxid DisambiguatedProfile-module_disambiguatedProfile_mxid"
    >
      @alice:example.org
    </span>
  </button>
</div>
`;

exports[`DisambiguatedProfileView > renders with color class 1`] = `
<div>
  <button
    class="DisambiguatedProfile-module_disambiguatedProfile"
    type="button"
  >
    <span
      class="mx_Username_color3 DisambiguatedProfile-module_disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Bob
    </span>
  </button>
</div>
`;

exports[`DisambiguatedProfileView > renders with emphasized display name 1`] = `
<div>
  <button
    class="DisambiguatedProfile-module_disambiguatedProfile"
    type="button"
  >
    <span
      class="DisambiguatedProfile-module_disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Charlie
    </span>
  </button>
</div>
`;

exports[`DisambiguatedProfileView > renders with tooltip 1`] = `
<div>
  <button
    class="DisambiguatedProfile-module_disambiguatedProfile"
    title="Diana (@diana:example.org)"
    type="button"
  >
    <span
      class="DisambiguatedProfile-module_disambiguatedProfile_displayName mx_DisambiguatedProfile_displayName"
      dir="auto"
    >
      Diana
    </span>
  </button>
</div>
`;
